style.css
body {
    font-size: 18px;
    padding: 0 150px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: rgb(19, 28, 61);
    color: #4ab3c5;
    margin: 0;
}

.index-body {
    background-image: url(images/ai/darkcity2.jpeg);
    background-repeat: no-repeat;
    background-size: cover;
}

.projects {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    width: auto;
}

.contact-page-body {

    background-image: url(images/ai/darkcity1.jpeg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
}

.navbar {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    background-color: #1d2340;
    color: #fff;
    padding: 10px 0;
    border-radius: 15px;
    margin-bottom: 75px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.767);

}

.brand {
    margin-left: 10px;
    margin-right: auto;
    font-weight: bold;
    font-size: 1rem;
    color: orangered;
    font-size: 4rem;
    font-weight: bold;
}

.nav-link {
    color: orangered;
    margin-left: 10px;
    text-decoration: none;
    margin-right: 5px;
    font-size: 25px;
}

.nav-link:hover {
    color: #15f10e;
    background-color: #18306d;
    transform: scale(1.1);
}

h2 {
    text-align: center;
    color: orangered ;
    margin-top: 50px;
    margin-bottom: 10px;
    font-size: 3rem;
   
}

.about-me,
.project-card {
    display: flex;
    background-color: rgba(53, 63, 116, 0.6);
    padding: 1rem;

}

.project-card {
    display: flex;
    background-color: rgba(53, 63, 116, 0.6);
    max-width: 100%; /* Make the image take up 100% of its container width */
    height: auto; /* Make the image take up 100% of its container height */
    max-height: 1000px;
    object-fit: contain; /* Scale the image to cover the entire container while maintaining aspect ratio */
    margin-bottom: 0;
    padding: 20px 5px 0px 5px;
}


.project-image img {
    display: block;
    width: 100%; /* Make the image take up 100% of its container width */
    height: auto; /* Make the image take up 100% of its container height */
    max-height: 1000px;
    object-fit: cover; /* Scale the image to cover the entire container while maintaining aspect ratio */
    margin-bottom: 0;
    padding: 20px 5px 0px 5px;
    }

    #tribeca-lots img {
        width: 100% !important;
    }

.logo img{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;
    width: 50%;
    height: auto;
}

#about-me p {
    font-size: 1.1em;
    line-height: 1.6;
}

#about-me p:first-child {
    font-weight: bold;
}

.skills {
    display: flex;
    justify-content:start;
    flex-wrap: wrap;
    gap: 5px;
}

.contact-icons {
    display: flex;
    justify-content: center;
    gap: 30px;
    margin-top: 200px;
}

ul {
    list-style-type: circle;
    /* Remove default bullet */
    padding: 2%;
    margin: 0;
    justify-content: left;
    font-size: 16px;

}

.project-thumb-info ul {
    color: #4ab3c5;
    margin:0;
}

#projects-dropdown {
    background-color: #131c3d;
    color: #4ab3c5;
    font-family: Arial, sans-serif;
    font-size: 16px;
    padding: 5px 10px;
    border: 1px solid #ccc;
    width: 75%;
    justify-content: center;
}

#projects-dropdown option:first-child {
display: flex;
justify-content: center;
align-items: center;
}


#projects-dropdown option:hover {
    background-color: #e0e0e00c;
    color: #555;
}

#projects-dropdown:hover {
    border-color: #15f10e;
}

.skills {
    display: flex;
    justify-content: space-around;
    align-items: center;
}


/* Center the dropdown box on the page */
.project-list-items {
    display: flex;
    justify-content: center;
}

.footer {
    display: flex;
    justify-content: center;
    padding: 150px;

}

.footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: #1d2340;
    color: #fff;
    text-align: center;
    padding: 10px 0;
}

@media only screen and (max-width: 768px) {
    body {
        font-size: 16px;
        padding: 0 10px;
    }
    .container {
        padding: 10px;
    }
    .navbar {
        flex-direction: column;
        align-items: center;
        padding: 10px;
        margin-bottom: 20px;
    }
    .brand {
        margin: 0;
        font-size:3rem;
    }
    .nav-link {
        font-size: 20px;
    }
    .skills {
        flex-direction: column; /* Stack items vertically on smaller screens */
        align-items: center; /* Center items vertically */
    }
    /* Add more styles as needed for better mobile layout */
}

